--- a/README.org
+++ b/README.org
@@ -1,43 +1,3 @@
-# The best web browser for viewing SegAnnDB is an
-# old version of google chrome, ca Mar 2013 - Jan 2014.
-http://google-chrome.en.uptodown.com/ubuntu/download/65857
+SegAnnDB: supervised interactive DNA copy number analysis
 
-# Download python-dev and required packages.
-sudo apt-get install python-dev python-setuptools python-numpy python-bsddb3 subversion build-essential python-imaging db-util
-
-# These are not strictly essential, but are useful:
-sudo apt-get emacs htop 
-
-# Download/install pyramid + persona
-sudo easy_install "pyramid==1.4.5" 
-sudo easy_install pyramid-persona
-
-# Download and install SegAnnot and PrunedDP extension modules.
-svn checkout svn://r-forge.r-project.org/svnroot/segannot/python segannot
-pushd segannot
-python setup.py build
-sudo python setup.py install
-popd
-
-# Download/install SegAnnDB.
-svn checkout svn://scm.gforge.inria.fr/svnroot/breakpoints/webapp/pyramid SegAnnDB
-cd SegAnnDB
-sed -i 's/^FILE_PREFIX =/#FILE_PREFIX =/' plotter/db.py
-sed -i 's/#FILE_PREFIX = "."/FILE_PREFIX = "."/' plotter/db.py
-sudo python setup.py install
-
-# for an apache web server
-sudo apt-get install apache2 libapache2-mod-wsgi
-cd /var/www
-mkdir db secret chromlength
-cp ~/SegAnnDB/apache.config /etc/apache2/sites-available/pyramid.conf
-sudo a2enmod wsgi
-sudo a2dissite 000-default
-sudo a2ensite pyramid
-cd ~/SegAnnDB
-bash server-recover-restart.sh
-
-# start the local server and 2 daemons (profile processing and
-# learning).
-mkdir db secret chromlength
-bash recover-restart.sh
+For installation instructions see [[file:INSTALL.sh][INSTALL.sh]].
