--- a/NEWS_TODO.org
+++ b/NEWS_TODO.org
@@ -1,20 +1,31 @@
 TODO
 
-In practice the process daemon can be inactive when there are still
-un-processed profiles. When the process daemon is idle it should check
-the list of profiles and add un-processed profiles back into the
-ProfileQueue.
+Add support for browsers that do not render large PNG images. SegAnnDB
+currently uses very large PNGs to visualize DNA copy number profiles,
+but these are not supported by all browsers.
+http://sugiyama-www.cs.titech.ac.jp/~toby/images/ One way to fix this
+problem would be to always assume that the maximum pixel width is 1500
+(the current size for "standard" whole chromosome display, and for
+whole profile display). On the chromosome page, e.g.
+http://bioviz.rocq.inria.fr/profile/dr3hg19/2/ we could delete the
+"Plot size" links. Instead we would provide links at the top to
+various sub-regions of chromosomes, like we have chromosome links on
+the top of http://bioviz.rocq.inria.fr/profile/dr3hg19/ The links
+would be
+e.g. http://bioviz.rocq.inria.fr/profile/dr3hg19/2/1000000:2000000/
+and those pages would contain 1500 x 200 pixel images, and provide
+links to the areas before and after on that same chromosome.
 
 Social features for sharing annotations. SegAnnDB currently lets a
-user login using Mozilla Persona and then add user-specific
-annotations. These annotations are currently only accessible to the
+user login using Mozilla Persona and then add user-specific annotated
+region labels. These annotations are currently only accessible to the
 user that creates them, but it would be nice to be able to share them
 with others. For example, Alice annotates some data then types the
 email address of her friend Bob into a web form. Bob then receives an
 email with a web link where he can view Alice's annoatations.
 
-Adminstrative features. SegAnnDB uses BerkeleyDB, which is very fast
-but makes updating and deleting profiles a bit tricky. I have started
+Faster deletion. SegAnnDB uses BerkeleyDB, which is very fast but
+makes updating and deleting profiles a bit tricky. I have started
 writing a view (plotter.views.delete_profiles) for profile deletion
 along with some database support (plotter.db.Profile.delete), but it
 is a slow O(ND) operation where T is the number of databases and N is
@@ -31,15 +42,17 @@ in the database, and then when the profile is deleted, check for
 deletion of relvant objects and files (PNG scatterplots,
 probes.bedGraph.gz data).
 
-Add support for browsers that do not render large PNG images. SegAnnDB
-uses very large PNGs to efficiently visualize DNA copy number
-profiles, but these are not supported by all browsers.
-http://sugiyama-www.cs.titech.ac.jp/~toby/images/
-
 Integration with Galaxy? From within Galaxy, is it possible to store
 the annotated regions in a database and display an updated
 segmentation model?
 https://wiki.galaxyproject.org/VisualizationsRegistry
+
+2015.12.10
+
+In practice the process daemon can be inactive when there are still
+un-processed profiles. When the process daemon is idle it should check
+the list of profiles and add un-processed profiles back into the
+ProfileQueue.
 
 2015.11.19
 
